tests/cases/scc/error/0017-duplicatefunc.c.res
./tests/cases/scc/error/0017-duplicatefunc.c:10:1:	error:   redefinition of main.
./tests/cases/scc/error/0017-duplicatefunc.c:4:1:	info:    previous definition was here.
exit code 1
